--- a/wafs/views/home.handlebars
+++ b/wafs/views/home.handlebars
@@ -1,4 +1,5 @@
 {{#each item}}
+<p></p>
 	<article>
 		<div>
 			<a class="link" href="/issues/{{id}}">
@@ -7,6 +8,6 @@
 			 <p> Repo name: {{name}}</p>
 			 <p> Open issues: {{open_issues_count}} </p>
 		</div>
-		<img src="{{owner.avatar_url}}">
+		<img src="../img/img_optim/{{imgCheck}}">
 	 </article>
 {{/each}}
