--- a/wafs/views/layouts/main.handlebars
+++ b/wafs/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="../css/bootstrap.css">
 	<link rel="stylesheet" href="../css/styles.css">
 	<title>GitRepos</title>
 </head>
@@ -12,5 +13,6 @@
 	<main>
 		{{{body}}}
 	</main>
+	<script type="text/javascript" src="../js/jquery-3.3.1.js" async></script>
 </body>
 </html>
