--- a/wafs/views/layouts/main.handlebars
+++ b/wafs/views/layouts/main.handlebars
@@ -13,6 +13,7 @@
 	<main>
 		{{{body}}}
 	</main>
+	<script type="text/javascript" src="../js/serviceWorker.js"></script>
 	<script type="text/javascript" src="../js/jquery-3.3.1.js" async></script>
 </body>
 </html>
